Fix jar file